# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20260421180940_make_status_not_null_in_subscriptions.sql  20260421181553_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
