[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Emiljan Dusha"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
config = "0.15.22"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.0", features = ["full"] }
tokio-macros = "2.7.0"
uuid = { version = "1.23.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
