[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Emiljan Dusha"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
config = "0.15.22"
once_cell = "1.21.4"
reqwest = "0.13.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
tokio = { version = "1.51.0", features = ["full"] }
tokio-macros = "2.7.0"
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.21"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["registry", "env-filter"] }
uuid = { version = "1.23.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
